--- a/index.html
+++ b/index.html
@@ -36,6 +36,9 @@
 <body>
   <script src="https://code.jquery.com/jquery-2.2.3.js"></script>
   <script src="js/clippy.min.js"></script>
+
+
+
   <!-- Navigation -->
   <nav class="navbar navbar-default navbar-fixed-top topnav" role="navigation">
       <div class="container topnav">
@@ -47,7 +50,7 @@
                   <span class="icon-bar"></span>
                   <span class="icon-bar"></span>
               </button>
-              <a class="navbar-brand topnav" href="#">Start Bootstrap</a>
+              <a class="navbar-brand topnav" href="#"></a>
           </div>
           <!-- Collect the nav links, forms, and other content for toggling -->
           <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
@@ -56,7 +59,7 @@
                       <a href="#about">About</a>
                   </li>
                   <li>
-                      <a href="#services">Services</a>
+                      <a href="#services">Projects</a>
                   </li>
                   <li>
                       <a href="#contact">Contact</a>
@@ -69,11 +72,11 @@
   </nav>
 
 
-  <!-- Header -->
-  <a name="about"></a>
-  <div class="intro-header">
-      <div class="container ">
 
+  <!-- header -->
+
+  <div class="intro-header">
+      <div class="container intro-header">
           <div class="row">
               <div class="col-lg-12">
                   <div class="intro-message">
@@ -86,58 +89,117 @@
                               <a href="https://github.com/coffeecola" class="btn btn-default btn-lg"><i class="fa fa-github fa-fw"></i> <span class="network-name">Github</span></a>
                           </li>
                           <li>
-                              <a href="#" class="btn btn-default btn-lg"><i class="fa fa-linkedin fa-fw"></i> <span class="network-name">Linkedin</span></a>
+                              <a href="https://linkedin.com/robertmet1b" class="btn btn-default btn-lg"><i class="fa fa-linkedin fa-fw"></i> <span class="network-name">Linkedin</span></a>
                           </li>
                       </ul>
                   </div>
               </div>
           </div>
-
       </div>
       <!-- /.container -->
-
   </div>
   <!-- /.intro-header -->
 
   <!-- Page Content -->
-  <a  name="services"></a>
+  <a  name="About"></a>
     <div class="content-section-a">
-
-        <div class="container">
-            <div class="row">
-                <div class="col-lg-5 col-sm-6">
-                    <hr class="section-heading-spacer">
-                    <div class="clearfix"></div>
-                    <h2 class="section-heading">Full-Stack Web Development with JavaScript:<br>by NYCDA</h2>
-                    <p class="lead">
-                      Three month intensive bootcamp. Languages and frameworks:
-                      <ul>
-                        <li>Javascript</li>
-                        <li>jQuery</li>
-                        <li>Node.js</li>
-                        <li>Module Building</li>
-                        <li>API's</li>
-                        <li>Bootstrap</li>
-                        <li>CSS3</li>
-                        <li>Jade</li>
-                        <li>LESS</li>
-                        <li>React.js</li>
-                      </ul>
-
-                    </p>
-                </div>
-                <div class="col-lg-5 col-lg-offset-2 col-sm-6">
-                    <img class="img-responsive" src="img/nycda_r2.png" alt="">
-                </div>
-            </div>
-
-        </div>
+      <section id="about">
+          <div class="container">
+              <div class="row">
+                  <div class="col-lg-12 text-center">
+                      <h2 class="section-heading">About Me</h2>
+                      <h3 class="section-subheading text-muted"></h3>
+                  </div>
+              </div>
+              <div class="row text-center">
+                  <div class="col-md-4">
+                      <span class="fa-stack fa-4x fa-animated-hover">
+                          <i class="fa fa-circle fa-stack-2x "></i>
+                          <i class="fa fa-code animated-hover fa-stack-1x fa-inverse"></i>
+                      </span>
+                      <h4 class="service-heading">Coding</h4>
+                      <p class="text-muted">Copy paste</p>
+                  </div>
+                  <div class="col-md-4">
+                      <span class="fa-stack fa-4x">
+                          <i class="fa fa-circle fa-stack-2x "></i>
+                          <i class="fa fa-floppy-o fa-stack-1x fa-inverse"></i>
+                      </span>
+                      <h4 class="service-heading">Floppy designer</h4>
+                      <p class="text-muted">Years of floppy design experience.</p>
+                  </div>
+                  <div class="col-md-4">
+                      <span class="fa-stack fa-4x">
+                          <i class="fa fa-circle fa-stack-2x "></i>
+                          <i class="fa fa-coffee fa-stack-1x fa-inverse"></i>
+                      </span>
+                      <h4 class="service-heading">Coffee cup maker</h4>
+                      <p class="text-muted">Making coffee cup's since 2003</p>
+                  </div>
+              </div>
+          </div>
+      </section>
         <!-- /.container -->
 
     </div>
 
-<div class="parallax-window" data-parallax="scroll" data-image-src="img/banner_bg.jpg"></div>
-
+    <section class="no-padding" id="portfolio">
+        <div class="container">
+          <div class="row">
+              <div class="col-lg-12 text-center">
+                  <h2 class="section-heading">Projects</h2>
+                  <h3 class="section-subheading text-muted"></h3>
+              </div>
+          </div>
+            <div class="row no-gutter">
+                <div class="col-lg-4 col-sm-6">
+                    <a href="#" class="portfolio-box">
+                        <img src="img/portfolio/1.jpg" class="img-responsive" alt="">
+                        <div class="portfolio-box-caption">
+                            <div class="portfolio-box-caption-content">
+                                <div class="project-category text-faded">
+                                    DOS
+                                </div>
+                                <div class="project-name">
+                                    Fun times
+                                </div>
+                            </div>
+                        </div>
+                    </a>
+                </div>
+                <div class="col-lg-4 col-sm-6">
+                    <a href="#" class="portfolio-box">
+                        <img src="img/portfolio/2.jpg" class="img-responsive" alt="">
+                        <div class="portfolio-box-caption">
+                            <div class="portfolio-box-caption-content">
+                                <div class="project-category text-faded">
+                                    Games
+                                </div>
+                                <div class="project-name">
+                                    Jack Jazz
+                                </div>
+                            </div>
+                        </div>
+                    </a>
+                </div>
+                <div class="col-lg-4 col-sm-6">
+                    <a href="#" class="portfolio-box">
+                        <img src="img/portfolio/3.jpg" class="img-responsive" alt="">
+                        <div class="portfolio-box-caption">
+                            <div class="portfolio-box-caption-content">
+                                <div class="project-category text-faded">
+                                    Stock
+                                </div>
+                                <div class="project-name">
+                                    Beautifull
+                                </div>
+                            </div>
+                        </div>
+                    </a>
+                </div>
+              </div>
+        </div>
+    </section>
 
 
 <!-- Contact form -->
@@ -145,8 +207,8 @@
     <div class="container">
         <div class="row">
             <div class="col-lg-12 text-center">
-                <h2 class="section-heading">Contact Us</h2>
-                <h3 class="section-subheading text-muted">Lorem ipsum dolor sit amet consectetur.</h3>
+                <h2 class="section-heading">Contact Me</h2>
+                <h3 class="section-subheading text-muted">For Free Money</h3>
             </div>
         </div>
         <div class="row">
@@ -185,13 +247,33 @@
     </div>
 </section>
 
+<footer>
+    <div class="container">
+        <div class="row">
+            <div class="col-md-4">
+                <span class="copyright">Copyright &copy; Your Website 1999</span>
+            </div>
+
+            <div class="col-md-4">
+                <ul class="list-inline quicklinks pull-right">
+                    <li><a href="#">Privacy Policy</a>
+                    </li>
+                    <li><a href="#">Terms of Use</a>
+                    </li>
+                </ul>
+            </div>
+        </div>
+    </div>
+</footer>
+
 
 
 <script type="text/javascript">
     clippy.load('Clippy', function(agent) {
         // Do anything with the loaded agent
         agent.show();
-        agent.speak("Fuck you stupid asshole");
+        agent.speak("Hello, and welcome to the best website ever!");
+        agent.speak("Just kiddin...");
     });
 
     clippy.ready(function(agent){
