--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
   <!-- header -->
 
   <div class="intro-header">
-      <div class="container intro-header">
+      <div class="container">
           <div class="row">
               <div class="col-lg-12">
                   <div class="intro-message">
