--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 
 
   <!-- Navigation -->
-  <nav class="navbar navbar-default navbar-fixed-top topnav" role="navigation">
+  <nav class="navbar navbar-default navbar-fixed-top topnav">
       <div class="container topnav">
           <!-- Brand and toggle get grouped for better mobile display -->
           <div class="navbar-header">
@@ -108,7 +108,7 @@
               <div class="row">
                   <div class="col-lg-12 text-center">
                       <h2 class="section-heading">About Me</h2>
-                      <h3 class="section-subheading text-muted"></h3>
+                      <br>
                   </div>
               </div>
               <div class="row text-center">
@@ -148,7 +148,7 @@
           <div class="row">
               <div class="col-lg-12 text-center">
                   <h2 class="section-heading">Projects</h2>
-                  <h3 class="section-subheading text-muted"></h3>
+                  <br>
               </div>
           </div>
             <div class="row no-gutter">
